modified:   app.js 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 	<title>Intro To Javascript DOM</title>
 </head>
 <body>
-
+	<div>Hello</div>
+	<div id="use-id-method">Change me by id</div>
+	<div class="use-class-method">Change my by className</div>
 </body>
 <script src="app.js"></script>
 </html>
