--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 </head>
 <body>
 	<div>Hello</div>
-	<div id="use-id-method">Change me by id</div>
-	<div class="use-class-method">Change my by className</div>
+	<div id="use-id-method">Change me by className 1</div>
+	<div class="use-class-method">Change me by className 2</div>
 </body>
 <script src="app.js"></script>
 </html>
